package com.smarthire.domain.enums;

public enum InterviewStatus {
    CREATED,
    QUESTIONS_READY,
    IN_PROGRESS,
    SCORING,
    SCORED,
    FAILED;
}
