package com.smarthire.domain.enums;

public enum ScheduleStatus {
    PROPOSED,
    CONFIRMED,
    CANCELLED,
    DONE;
}
