@startuml
!include ../class-style.puml

package "Controller Layer" {
  class DirectInterviewScheduleController <<Controller>> {
    - scheduleAssignmentService: ScheduleAssignmentService
    + scheduleAndAssign(interviewId: Long, request: ScheduleAssignRequest): ApiResponse<ScheduleAssignResponse>
  }
}

package "DTO Layer" {
  class ScheduleAssignRequest <<Request>> {
    + startsAt: Instant
    + endsAt: Instant
    + timezone: String
    + format: InterviewFormat
    + locationOrUrl: String [0..1]
    + participantUserIds: List<Long>
  }
  class ScheduleAssignResponse <<Response>> {
    + interviewId: Long
    + scheduleId: Long
    + status: ScheduleStatus
    + interviewStatus: InterviewStatus
    + format: InterviewFormat
    + startsAt: Instant
    + endsAt: Instant
    + participants: List<ParticipantView>
  }
  class ParticipantView <<DTO>> {
    + userId: Long
    + fullName: String
    + role: ParticipantRole
  }
}

package "Service Layer" {
  interface ScheduleAssignmentService <<Service>> {
    + scheduleAndAssign(interviewId: Long, request: ScheduleAssignRequest, principal: Principal): ScheduleAssignResponse
  }
  class ScheduleAssignmentServiceImpl <<Service>> {
    - interviewRepository: InterviewRepository
    - scheduleRepository: InterviewScheduleRepository
    - participantRepository: InterviewParticipantRepository
    - userRepository: UserRepository
    - tenantContext: TenantContext
    + scheduleAndAssign(interviewId: Long, request: ScheduleAssignRequest, principal: Principal): ScheduleAssignResponse
  }
}

package "Repository Layer" {
  interface InterviewRepository <<Repository>> {
    + findById(id: Long): Optional<Interview>
    + save(interview: Interview): Interview
  }
  interface InterviewScheduleRepository <<Repository>> {
    + save(schedule: InterviewSchedule): InterviewSchedule
    + findOverlapping(userId: Long, from: Instant, to: Instant): List<InterviewSchedule>
  }
  interface InterviewParticipantRepository <<Repository>> {
    + saveAll(participants: List<InterviewParticipant>): List<InterviewParticipant>
    + deleteByInterviewId(interviewId: Long): void
  }
  interface UserRepository <<Repository>> {
    + findAllById(ids: List<Long>): List<User>
  }
}

package "Domain Entity Layer" {
  class Interview <<Entity>> {
    - id: Long
    - mode: InterviewMode
    - status: InterviewStatus
    - application: Application
  }
  class InterviewSchedule <<Entity>> {
    - id: Long
    - interview: Interview
    - application: Application
    - startsAt: Instant
    - endsAt: Instant
    - timezone: String
    - format: InterviewFormat
    - locationOrUrl: String [0..1]
    - status: ScheduleStatus
    - createdBy: Long
  }
  class InterviewParticipant <<Entity>> {
    - id: Long
    - interview: Interview
    - user: User
    - role: ParticipantRole
  }
  class Application <<Entity>> {
    - id: Long
  }
  class User <<Entity>> {
    - id: Long
    - fullName: String
    - role: String
  }
  enum InterviewFormat <<Enum>> {
    ONLINE
    ONSITE
    HYBRID
  }
  enum ScheduleStatus <<Enum>> {
    PROPOSED
    CONFIRMED
    CANCELLED
    DONE
  }
  enum ParticipantRole <<Enum>> {
    PRIMARY
    SECONDARY
    OBSERVER
  }
  enum InterviewStatus <<Enum>> {
    CREATED
    SCHEDULED
    IN_PROGRESS
    EVALUATED
    CANCELLED
  }
  enum InterviewMode <<Enum>> {
    DIRECT
  }
}

package "Infrastructure & Persistence" {
  class TenantMySQL <<Database>> {
    .. Dedicated Tenant DB ..
    + interviews
    + interview_schedules
    + interview_participants
    + users
  }
  class TenantContext <<DataSource>> {
    + {static} getCurrentTenant(): String
    + {static} setCurrentTenant(tenantId: String): void
    + {static} clear(): void
  }
}

DirectInterviewScheduleController ..> ScheduleAssignRequest : consumes >
DirectInterviewScheduleController ..> ScheduleAssignResponse : returns >
DirectInterviewScheduleController --> ScheduleAssignmentService : delegates >

ScheduleAssignmentService <|.. ScheduleAssignmentServiceImpl : implements
ScheduleAssignmentServiceImpl ..> ScheduleAssignRequest : processes >
ScheduleAssignmentServiceImpl ..> ScheduleAssignResponse : creates >
ScheduleAssignmentServiceImpl --> InterviewRepository : manages >
ScheduleAssignmentServiceImpl --> InterviewScheduleRepository : persists through >
ScheduleAssignmentServiceImpl --> InterviewParticipantRepository : persists through >
ScheduleAssignmentServiceImpl --> UserRepository : queries >
ScheduleAssignmentServiceImpl --> TenantContext : caches / evicts >

InterviewScheduleRepository --> InterviewSchedule : manages >
InterviewParticipantRepository --> InterviewParticipant : manages >
InterviewRepository --> Interview : manages >
InterviewScheduleRepository --> TenantMySQL : persists to >
InterviewParticipantRepository --> TenantMySQL : persists to >

InterviewSchedule "0..*" --> "1" Interview
InterviewParticipant "0..*" --> "1" Interview
InterviewParticipant "0..*" --> "1" User
InterviewSchedule ..> InterviewFormat : typed by >
InterviewSchedule ..> ScheduleStatus : typed by >
InterviewParticipant ..> ParticipantRole : typed by >
Interview ..> InterviewStatus : typed by >
Interview ..> InterviewMode : typed by >

note right of ScheduleAssignmentServiceImpl
  Requires interview.mode=DIRECT and status=CREATED.
  At least one PRIMARY participant.
  Conflict check is soft-warn or hard-block by policy.
end note

@enduml
